--- a/weather_prediction.ipynb
+++ b/weather_prediction.ipynb
@@ -437,10 +437,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Precipitation (%)</th>\n",
+       "      <th>Cloud Cover</th>\n",
+       "      <th>Atmospheric Pressure</th>\n",
+       "      <th>UV Index</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Visibility (km)</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Weather Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>73</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1010.82</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>39.0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1011.43</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1018.72</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>83</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1026.25</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>990.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13195</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1003.15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13196</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>76</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1067.23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13197</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>77</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1012.69</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13198</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>76</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>984.27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13199</th>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1015.37</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13200 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Temperature  Humidity  Wind Speed  Precipitation (%)  Cloud Cover  \\\n",
+       "0             14.0        73         9.5               82.0            3   \n",
+       "1             39.0        96         8.5               71.0            3   \n",
+       "2             30.0        64         7.0               16.0            0   \n",
+       "3             38.0        83         1.5               82.0            0   \n",
+       "4             27.0        74        17.0               66.0            2   \n",
+       "...            ...       ...         ...                ...          ...   \n",
+       "13195         10.0        74        14.5               71.0            2   \n",
+       "13196         -1.0        76         3.5               23.0            1   \n",
+       "13197         30.0        77         5.5               28.0            2   \n",
+       "13198          3.0        76        10.0               94.0            2   \n",
+       "13199         -5.0        38         0.0               92.0            2   \n",
+       "\n",
+       "       Atmospheric Pressure  UV Index  Season  Visibility (km)  Location  \\\n",
+       "0                   1010.82         2       3              3.5         1   \n",
+       "1                   1011.43         7       1             10.0         1   \n",
+       "2                   1018.72         5       1              5.5         2   \n",
+       "3                   1026.25         7       1              1.0         0   \n",
+       "4                    990.67         1       3              2.5         2   \n",
+       "...                     ...       ...     ...              ...       ...   \n",
+       "13195               1003.15         1       2              1.0         2   \n",
+       "13196               1067.23         1       3              6.0         0   \n",
+       "13197               1012.69         3       0              9.0         0   \n",
+       "13198                984.27         0       3              2.0         1   \n",
+       "13199               1015.37         5       0             10.0         2   \n",
+       "\n",
+       "       Weather Type  \n",
+       "0                 1  \n",
+       "1                 0  \n",
+       "2                 3  \n",
+       "3                 3  \n",
+       "4                 1  \n",
+       "...             ...  \n",
+       "13195             1  \n",
+       "13196             2  \n",
+       "13197             0  \n",
+       "13198             2  \n",
+       "13199             1  \n",
+       "\n",
+       "[13200 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "label_encoders = {}\n",
+    "for col in cat_cols:\n",
+    "    label_encoders[col] = LabelEncoder()\n",
+    "    df[col] = label_encoders[col].fit_transform(df[col])\n",
+    "\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
