--- a/weather_prediction.ipynb
+++ b/weather_prediction.ipynb
@@ -255,6 +255,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Performing EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Separating categorical and numerical columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -433,6 +447,13 @@
    "metadata": {},
    "source": [
     "There are no missing values!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encoding"
    ]
   },
   {
@@ -694,6 +715,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature selection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -702,6 +730,13 @@
     "#Feature Selection\n",
     "x= df.drop('Weather Type', axis=1)\n",
     "y= df['Weather Type']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TRAINING and TESTING"
    ]
   },
   {
