--- a/weather_prediction.ipynb
+++ b/weather_prediction.ipynb
@@ -258,14 +258,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Performing EDA"
+    "#Performing EDA"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Separating categorical and numerical columns"
+    "#Separating categorical and numerical columns"
    ]
   },
   {
@@ -453,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encoding"
+    "#Encoding"
    ]
   },
   {
@@ -718,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feature selection"
+    "#Feature selection"
    ]
   },
   {
@@ -727,7 +727,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Feature Selection\n",
     "x= df.drop('Weather Type', axis=1)\n",
     "y= df['Weather Type']"
    ]
@@ -736,7 +735,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TRAINING and TESTING"
+    "#TRAINING and TESTING"
    ]
   },
   {
